...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/container_horizontal_margin"
    android:layout_marginEnd="@dimen/container_horizontal_margin">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/followed_item_list"
        android:name="com.tools.timezone.followed.FollowedListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layoutManager="LinearLayoutManager"
        tools:context="com.tools.timezone.presentation.activity.MainActivity"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:src="@drawable/edit_calendar_24"
        app:layout_constraintBottom_toBottomOf="parent"
...
